src/libs/frontend/WeaverParser.cpp

// Generated from /home/xiacijie/Project/Weaver/src/grammar/WeaverParser.g4 by ANTLR 4.9.2


#include "WeaverParserVisitor.h"

#include "WeaverParser.h"


using namespace antlrcpp;
using namespace weaver;
using namespace antlr4;

WeaverParser::WeaverParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

WeaverParser::~WeaverParser() {
  delete _interpreter;
}

std::string WeaverParser::getGrammarFileName() const {
  return "WeaverParser.g4";
}

const std::vector<std::string>& WeaverParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& WeaverParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

WeaverParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* WeaverParser::ProgramContext::EOF() {
  return getToken(WeaverParser::EOF, 0);
}

std::vector<WeaverParser::StatementContext *> WeaverParser::ProgramContext::statement() {
  return getRuleContexts<WeaverParser::StatementContext>();
}

WeaverParser::StatementContext* WeaverParser::ProgramContext::statement(size_t i) {
  return getRuleContext<WeaverParser::StatementContext>(i);
}


size_t WeaverParser::ProgramContext::getRuleIndex() const {
  return WeaverParser::RuleProgram;
}


antlrcpp::Any WeaverParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<WeaverParserVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

WeaverParser::ProgramContext* WeaverParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, WeaverParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(49);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << WeaverParser::INT)
      | (1ULL << WeaverParser::BOOL)
      | (1ULL << WeaverParser::IF)
      | (1ULL << WeaverParser::WHILE)
      | (1ULL << WeaverParser::ASSERT)
      | (1ULL << WeaverParser::ASSUME)
      | (1ULL << WeaverParser::ATOMIC)
      | (1ULL << WeaverParser::PARALLEL)
      | (1ULL << WeaverParser::IDENTIFIER)
      | (1ULL << WeaverParser::LEFT_BRACE))) != 0)) {
      setState(46);
      statement();
      setState(51);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(52);
    match(WeaverParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

WeaverParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* WeaverParser::TypeContext::INT() {
  return getToken(WeaverParser::INT, 0);
}

tree::TerminalNode* WeaverParser::TypeContext::BOOL() {
  return getToken(WeaverParser::BOOL, 0);
}


size_t WeaverParser::TypeContext::getRuleIndex() const {
  return WeaverParser::RuleType;
}


antlrcpp::Any WeaverParser::TypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<WeaverParserVisitor*>(visitor))
    return parserVisitor->visitType(this);
  else
    return visitor->visitChildren(this);
}

WeaverParser::TypeContext* WeaverParser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 2, WeaverParser::RuleType);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(54);
    _la = _input->LA(1);
    if (!(_la == WeaverParser::INT

    || _la == WeaverParser::BOOL)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignmentContext ------------------------------------------------------------------

WeaverParser::AssignmentContext::AssignmentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* WeaverParser::AssignmentContext::IDENTIFIER() {
  return getToken(WeaverParser::IDENTIFIER, 0);
}

tree::TerminalNode* WeaverParser::AssignmentContext::ASSIGN() {
  return getToken(WeaverParser::ASSIGN, 0);
}

WeaverParser::ExpressionContext* WeaverParser::AssignmentContext::expression() {
  return getRuleContext<WeaverParser::ExpressionContext>(0);
}


size_t WeaverParser::AssignmentContext::getRuleIndex() const {
  return WeaverParser::RuleAssignment;
}


antlrcpp::Any WeaverParser::AssignmentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<WeaverParserVisitor*>(visitor))
    return parserVisitor->visitAssignment(this);
  else
    return visitor->visitChildren(this);
}

WeaverParser::AssignmentContext* WeaverParser::assignment() {
  AssignmentContext *_localctx = _tracker.createInstance<AssignmentContext>(_ctx, getState());
  enterRule(_localctx, 4, WeaverParser::RuleAssignment);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(56);
    match(WeaverParser::IDENTIFIER);
    setState(57);
    match(WeaverParser::ASSIGN);
    setState(58);
    expression(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SingleVarDeclarationContext ------------------------------------------------------------------

WeaverParser::SingleVarDeclarationContext::SingleVarDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* WeaverParser::SingleVarDeclarationContext::IDENTIFIER() {
  return getToken(WeaverParser::IDENTIFIER, 0);
}

tree::TerminalNode* WeaverParser::SingleVarDeclarationContext::LEFT_SQUARE_BRACKET() {
  return getToken(WeaverParser::LEFT_SQUARE_BRACKET, 0);
}

tree::TerminalNode* WeaverParser::SingleVarDeclarationContext::RIGHT_SQUARE_BRACKET() {
  return getToken(WeaverParser::RIGHT_SQUARE_BRACKET, 0);
}

WeaverParser::AssignmentContext* WeaverParser::SingleVarDeclarationContext::assignment() {
  return getRuleContext<WeaverParser::AssignmentContext>(0);
}


size_t WeaverParser::SingleVarDeclarationContext::getRuleIndex() const {
  return WeaverParser::RuleSingleVarDeclaration;
}


antlrcpp::Any WeaverParser::SingleVarDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<WeaverParserVisitor*>(visitor))
    return parserVisitor->visitSingleVarDeclaration(this);
  else
    return visitor->visitChildren(this);
}

WeaverParser::SingleVarDeclarationContext* WeaverParser::singleVarDeclaration() {
  SingleVarDeclarationContext *_localctx = _tracker.createInstance<SingleVarDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 6, WeaverParser::RuleSingleVarDeclaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(65);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(60);
      match(WeaverParser::IDENTIFIER);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(61);
      match(WeaverParser::IDENTIFIER);
      setState(62);
      match(WeaverParser::LEFT_SQUARE_BRACKET);
      setState(63);
      match(WeaverParser::RIGHT_SQUARE_BRACKET);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(64);
      assignment();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarDeclarationBodyContext ------------------------------------------------------------------

WeaverParser::VarDeclarationBodyContext::VarDeclarationBodyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<WeaverParser::SingleVarDeclarationContext *> WeaverParser::VarDeclarationBodyContext::singleVarDeclaration() {
  return getRuleContexts<WeaverParser::SingleVarDeclarationContext>();
}

WeaverParser::SingleVarDeclarationContext* WeaverParser::VarDeclarationBodyContext::singleVarDeclaration(size_t i) {
  return getRuleContext<WeaverParser::SingleVarDeclarationContext>(i);
}

std::vector<tree::TerminalNode *> WeaverParser::VarDeclarationBodyContext::COMA() {
  return getTokens(WeaverParser::COMA);
}

tree::TerminalNode* WeaverParser::VarDeclarationBodyContext::COMA(size_t i) {
  return getToken(WeaverParser::COMA, i);
}


size_t WeaverParser::VarDeclarationBodyContext::getRuleIndex() const {
  return WeaverParser::RuleVarDeclarationBody;
}


antlrcpp::Any WeaverParser::VarDeclarationBodyContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<WeaverParserVisitor*>(visitor))
    return parserVisitor->visitVarDeclarationBody(this);
  else
    return visitor->visitChildren(this);
}

WeaverParser::VarDeclarationBodyContext* WeaverParser::varDeclarationBody() {
  VarDeclarationBodyContext *_localctx = _tracker.createInstance<VarDeclarationBodyContext>(_ctx, getState());
  enterRule(_localctx, 8, WeaverParser::RuleVarDeclarationBody);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(67);
    singleVarDeclaration();
    setState(72);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == WeaverParser::COMA) {
      setState(68);
      match(WeaverParser::COMA);
      setState(69);
      singleVarDeclaration();
      setState(74);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarDeclarationStatementContext ------------------------------------------------------------------

WeaverParser::VarDeclarationStatementContext::VarDeclarationStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

WeaverParser::TypeContext* WeaverParser::VarDeclarationStatementContext::type() {
  return getRuleContext<WeaverParser::TypeContext>(0);
}

WeaverParser::VarDeclarationBodyContext* WeaverParser::VarDeclarationStatementContext::varDeclarationBody() {
  return getRuleContext<WeaverParser::VarDeclarationBodyContext>(0);
}

tree::TerminalNode* WeaverParser::VarDeclarationStatementContext::SEMICOLON() {
  return getToken(WeaverParser::SEMICOLON, 0);
}


size_t WeaverParser::VarDeclarationStatementContext::getRuleIndex() const {
  return WeaverParser::RuleVarDeclarationStatement;
}


antlrcpp::Any WeaverParser::VarDeclarationStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<WeaverParserVisitor*>(visitor))
    return parserVisitor->visitVarDeclarationStatement(this);
  else
    return visitor->visitChildren(this);
}

WeaverParser::VarDeclarationStatementContext* WeaverParser::varDeclarationStatement() {
  VarDeclarationStatementContext *_localctx = _tracker.createInstance<VarDeclarationStatementContext>(_ctx, getState());
  enterRule(_localctx, 10, WeaverParser::RuleVarDeclarationStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(75);
    type();
    setState(76);
    varDeclarationBody();
    setState(77);
    match(WeaverParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OperandContext ------------------------------------------------------------------

WeaverParser::OperandContext::OperandContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* WeaverParser::OperandContext::MINUS() {
  return getToken(WeaverParser::MINUS, 0);
}

tree::TerminalNode* WeaverParser::OperandContext::INTEGER() {
  return getToken(WeaverParser::INTEGER, 0);
}

WeaverParser::BooleanContext* WeaverParser::OperandContext::boolean() {
  return getRuleContext<WeaverParser::BooleanContext>(0);
}

tree::TerminalNode* WeaverParser::OperandContext::IDENTIFIER() {
  return getToken(WeaverParser::IDENTIFIER, 0);
}


size_t WeaverParser::OperandContext::getRuleIndex() const {
  return WeaverParser::RuleOperand;
}


antlrcpp::Any WeaverParser::OperandContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<WeaverParserVisitor*>(visitor))
    return parserVisitor->visitOperand(this);
  else
    return visitor->visitChildren(this);
}

WeaverParser::OperandContext* WeaverParser::operand() {
  OperandContext *_localctx = _tracker.createInstance<OperandContext>(_ctx, getState());
  enterRule(_localctx, 12, WeaverParser::RuleOperand);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(84);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case WeaverParser::MINUS: {
        enterOuterAlt(_localctx, 1);
        setState(79);
        match(WeaverParser::MINUS);
        setState(80);
        match(WeaverParser::INTEGER);
        break;
      }

      case WeaverParser::INTEGER: {
        enterOuterAlt(_localctx, 2);
        setState(81);
        match(WeaverParser::INTEGER);
        break;
      }

      case WeaverParser::TRUE:
      case WeaverParser::FALSE:
      case WeaverParser::Q_MARK: {
        enterOuterAlt(_localctx, 3);
        setState(82);
        boolean();
        break;
      }

      case WeaverParser::IDENTIFIER: {
        enterOuterAlt(_localctx, 4);
        setState(83);
        match(WeaverParser::IDENTIFIER);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SelectExpressionContext ------------------------------------------------------------------

WeaverParser::SelectExpressionContext::SelectExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* WeaverParser::SelectExpressionContext::IDENTIFIER() {
  return getToken(WeaverParser::IDENTIFIER, 0);
}

tree::TerminalNode* WeaverParser::SelectExpressionContext::LEFT_SQUARE_BRACKET() {
  return getToken(WeaverParser::LEFT_SQUARE_BRACKET, 0);
}

WeaverParser::ExpressionContext* WeaverParser::SelectExpressionContext::expression() {
  return getRuleContext<WeaverParser::ExpressionContext>(0);
}

tree::TerminalNode* WeaverParser::SelectExpressionContext::RIGHT_SQUARE_BRACKET() {
  return getToken(WeaverParser::RIGHT_SQUARE_BRACKET, 0);
}


size_t WeaverParser::SelectExpressionContext::getRuleIndex() const {
  return WeaverParser::RuleSelectExpression;
}


antlrcpp::Any WeaverParser::SelectExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<WeaverParserVisitor*>(visitor))
    return parserVisitor->visitSelectExpression(this);
  else
    return visitor->visitChildren(this);
}

WeaverParser::SelectExpressionContext* WeaverParser::selectExpression() {
  SelectExpressionContext *_localctx = _tracker.createInstance<SelectExpressionContext>(_ctx, getState());
  enterRule(_localctx, 14, WeaverParser::RuleSelectExpression);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(86);
    match(WeaverParser::IDENTIFIER);
    setState(87);
    match(WeaverParser::LEFT_SQUARE_BRACKET);
    setState(88);
    expression(0);
    setState(89);
    match(WeaverParser::RIGHT_SQUARE_BRACKET);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

WeaverParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

WeaverParser::OperandContext* WeaverParser::ExpressionContext::operand() {
  return getRuleContext<WeaverParser::OperandContext>(0);
}

WeaverParser::SelectExpressionContext* WeaverParser::ExpressionContext::selectExpression() {
  return getRuleContext<WeaverParser::SelectExpressionContext>(0);
}

tree::TerminalNode* WeaverParser::ExpressionContext::LEFT_PAREN() {
  return getToken(WeaverParser::LEFT_PAREN, 0);
}

std::vector<WeaverParser::ExpressionContext *> WeaverParser::ExpressionContext::expression() {
  return getRuleContexts<WeaverParser::ExpressionContext>();
}

WeaverParser::ExpressionContext* WeaverParser::ExpressionContext::expression(size_t i) {
  return getRuleContext<WeaverParser::ExpressionContext>(i);
}

tree::TerminalNode* WeaverParser::ExpressionContext::RIGHT_PAREN() {
  return getToken(WeaverParser::RIGHT_PAREN, 0);
}

tree::TerminalNode* WeaverParser::ExpressionContext::MINUS() {
  return getToken(WeaverParser::MINUS, 0);
}

tree::TerminalNode* WeaverParser::ExpressionContext::PLUS() {
  return getToken(WeaverParser::PLUS, 0);
}

tree::TerminalNode* WeaverParser::ExpressionContext::NOT() {
  return getToken(WeaverParser::NOT, 0);
}

tree::TerminalNode* WeaverParser::ExpressionContext::STAR() {
  return getToken(WeaverParser::STAR, 0);
}

WeaverParser::ComparisonOpContext* WeaverParser::ExpressionContext::comparisonOp() {
  return getRuleContext<WeaverParser::ComparisonOpContext>(0);
}

tree::TerminalNode* WeaverParser::ExpressionContext::AND() {
  return getToken(WeaverParser::AND, 0);
}

tree::TerminalNode* WeaverParser::ExpressionContext::OR() {
  return getToken(WeaverParser::OR, 0);
}


size_t WeaverParser::ExpressionContext::getRuleIndex() const {
  return WeaverParser::RuleExpression;
}


antlrcpp::Any WeaverParser::ExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<WeaverParserVisitor*>(visitor))
    return parserVisitor->visitExpression(this);
  else
    return visitor->visitChildren(this);
}


WeaverParser::ExpressionContext* WeaverParser::expression() {
   return expression(0);
}

WeaverParser::ExpressionContext* WeaverParser::expression(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  WeaverParser::ExpressionContext *_localctx = _tracker.createInstance<ExpressionContext>(_ctx, parentState);
  WeaverParser::ExpressionContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 16;
  enterRecursionRule(_localctx, 16, WeaverParser::RuleExpression, precedence);

    

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(104);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      setState(92);
      operand();
      break;
    }

    case 2: {
      setState(93);
      selectExpression();
      break;
    }

    case 3: {
      setState(94);
      match(WeaverParser::LEFT_PAREN);
      setState(95);
      expression(0);
      setState(96);
      match(WeaverParser::RIGHT_PAREN);
      break;
    }

    case 4: {
      setState(98);
      match(WeaverParser::MINUS);
      setState(99);
      expression(9);
      break;
    }

    case 5: {
      setState(100);
      match(WeaverParser::PLUS);
      setState(101);
      expression(8);
      break;
    }

    case 6: {
      setState(102);
      match(WeaverParser::NOT);
      setState(103);
      expression(7);
      break;
    }

    default:
      break;
    }
    _ctx->stop = _input->LT(-1);
    setState(127);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(125);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
        case 1: {
          _localctx = _tracker.createInstance<ExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpression);
          setState(106);

          if (!(precpred(_ctx, 6))) throw FailedPredicateException(this, "precpred(_ctx, 6)");
          setState(107);
          match(WeaverParser::STAR);
          setState(108);
          expression(7);
          break;
        }

        case 2: {
          _localctx = _tracker.createInstance<ExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpression);
          setState(109);

          if (!(precpred(_ctx, 5))) throw FailedPredicateException(this, "precpred(_ctx, 5)");
          setState(110);
          match(WeaverParser::PLUS);
          setState(111);
          expression(6);
          break;
        }

        case 3: {
          _localctx = _tracker.createInstance<ExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpression);
          setState(112);

          if (!(precpred(_ctx, 4))) throw FailedPredicateException(this, "precpred(_ctx, 4)");
          setState(113);
          match(WeaverParser::MINUS);
          setState(114);
          expression(5);
          break;
        }

        case 4: {
          _localctx = _tracker.createInstance<ExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpression);
          setState(115);

          if (!(precpred(_ctx, 3))) throw FailedPredicateException(this, "precpred(_ctx, 3)");
          setState(116);
          comparisonOp();
          setState(117);
          expression(4);
          break;
        }

        case 5: {
          _localctx = _tracker.createInstance<ExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpression);
          setState(119);

          if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
          setState(120);
          match(WeaverParser::AND);
          setState(121);
          expression(3);
          break;
        }

        case 6: {
          _localctx = _tracker.createInstance<ExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpression);
          setState(122);

          if (!(precpred(_ctx, 1))) throw FailedPredicateException(this, "precpred(_ctx, 1)");
          setState(123);
          match(WeaverParser::OR);
          setState(124);
          expression(2);
          break;
        }

        default:
          break;
        } 
      }
      setState(129);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- ComparisonOpContext ------------------------------------------------------------------

WeaverParser::ComparisonOpContext::ComparisonOpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* WeaverParser::ComparisonOpContext::EQ() {
  return getToken(WeaverParser::EQ, 0);
}

tree::TerminalNode* WeaverParser::ComparisonOpContext::NEQ() {
  return getToken(WeaverParser::NEQ, 0);
}

tree::TerminalNode* WeaverParser::ComparisonOpContext::LTE() {
  return getToken(WeaverParser::LTE, 0);
}

tree::TerminalNode* WeaverParser::ComparisonOpContext::GTE() {
  return getToken(WeaverParser::GTE, 0);
}

tree::TerminalNode* WeaverParser::ComparisonOpContext::LT() {
  return getToken(WeaverParser::LT, 0);
}

tree::TerminalNode* WeaverParser::ComparisonOpContext::GT() {
  return getToken(WeaverParser::GT, 0);
}


size_t WeaverParser::ComparisonOpContext::getRuleIndex() const {
  return WeaverParser::RuleComparisonOp;
}


antlrcpp::Any WeaverParser::ComparisonOpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<WeaverParserVisitor*>(visitor))
    return parserVisitor->visitComparisonOp(this);
  else
    return visitor->visitChildren(this);
}

WeaverParser::ComparisonOpContext* WeaverParser::comparisonOp() {
  ComparisonOpContext *_localctx = _tracker.createInstance<ComparisonOpContext>(_ctx, getState());
  enterRule(_localctx, 18, WeaverParser::RuleComparisonOp);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(130);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << WeaverParser::EQ)
      | (1ULL << WeaverParser::NEQ)
      | (1ULL << WeaverParser::LTE)
      | (1ULL << WeaverParser::GTE)
      | (1ULL << WeaverParser::LT)
      | (1ULL << WeaverParser::GT))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BooleanContext ------------------------------------------------------------------

WeaverParser::BooleanContext::BooleanContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* WeaverParser::BooleanContext::TRUE() {
  return getToken(WeaverParser::TRUE, 0);
}

tree::TerminalNode* WeaverParser::BooleanContext::FALSE() {
  return getToken(WeaverParser::FALSE, 0);
}

tree::TerminalNode* WeaverParser::BooleanContext::Q_MARK() {
  return getToken(WeaverParser::Q_MARK, 0);
}


size_t WeaverParser::BooleanContext::getRuleIndex() const {
  return WeaverParser::RuleBoolean;
}


antlrcpp::Any WeaverParser::BooleanContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<WeaverParserVisitor*>(visitor))
    return parserVisitor->visitBoolean(this);
  else
    return visitor->visitChildren(this);
}

WeaverParser::BooleanContext* WeaverParser::boolean() {
  BooleanContext *_localctx = _tracker.createInstance<BooleanContext>(_ctx, getState());
  enterRule(_localctx, 20, WeaverParser::RuleBoolean);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(132);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << WeaverParser::TRUE)
      | (1ULL << WeaverParser::FALSE)
      | (1ULL << WeaverParser::Q_MARK))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

WeaverParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

WeaverParser::AssignmentStatementContext* WeaverParser::StatementContext::assignmentStatement() {
  return getRuleContext<WeaverParser::AssignmentStatementContext>(0);
}

WeaverParser::IncreaseStatementContext* WeaverParser::StatementContext::increaseStatement() {
  return getRuleContext<WeaverParser::IncreaseStatementContext>(0);
}
